--- a/styles.css
+++ b/styles.css
@@ -1171,11 +1171,20 @@ button.submit-button:hover {
     }
  /* nav */ 
   .nav-links ul li {
-    padding: 1.5vw;
+    padding: 1vw;
   }
 
   .nav-links ul li a {
-    font-size: 1.8vw;
+    font-size: 2.2vw;
+  }
+
+  .nav-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 15vw;
+    height: auto;
+    padding: 1vw 2vw;
   }
 
   .click-me {
@@ -1203,87 +1212,87 @@ button.submit-button:hover {
     gap: 0;
   }
 
-    .mobile-version {
+  .mobile-version {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-between;
+    align-items: center;
+    height: 67vh; /* Set to fill the viewport height */
+    padding: 0; /* Remove extra padding */
+    width: 100vw;
+  }
+
+  /* Title Section */
+  .main-title {
+    height: 15vh;
+    padding: 12vh 0 0; /* Adjust padding as needed */
+  }
+  .main-title h1 {
+      font-size: 5vw;
+      margin: 0;
+
+  }
+
+  /* Designer and Coder Sections */
+  .designer-box {
+      padding: 2vh 0;
+      width: 100%;
+  }
+
+  .main-title {
+    background-image: url(/img/code-nobackground.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
+  .designer-box,
+  .coder-box {
       display: flex;
       flex-direction: column;
-      text-align: center;
-      justify-content: space-between;
+      justify-content: center; 
       align-items: center;
-      height: 70vh; /* Set to fill the viewport height */
-      padding: 0; /* Remove extra padding */
-      width: 100vw;
-    }
-
-    /* Title Section */
-    .main-title {
-      height: 15vh;
-      padding: 5vh 0 0; /* Adjust padding as needed */
-    }
-    .main-title h1 {
-        font-size: 5vw;
-        margin: 0;
-
-    }
-
-    /* Designer and Coder Sections */
-    .designer-box {
-       padding: 1vh 0 0;
-       width: 100%;
-    }
-
-    .main-title {
-      background-image: url(/img/code-nobackground.png);
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: cover;
-    }
-
-    .designer-box,
-    .coder-box {
-        display: flex;
-        flex-direction: column;
-        justify-content: center; 
-        align-items: center;
-        width: 100%;
-        max-width: 100vw; 
-        text-align: center;
-    }
-
-    .designer-box {
-      margin-top: 10vh;
-    }
-    .designer-box h2,
-    .coder-box h2 {
-      font-size: 4vw;
       width: 100%;
-      white-space: nowrap;
+      max-width: 100vw; 
       text-align: center;
-    }
-    .designer-box h3,
-    .coder-box h3 {
-      font-size: 3vw;
+  }
+
+  .designer-box {
+    margin-top: 10vh;
+  }
+  .designer-box h2,
+  .coder-box h2 {
+    font-size: 4vw;
+    width: 100%;
+    white-space: nowrap;
+    text-align: center;
+  }
+  .designer-box h3,
+  .coder-box h3 {
+    font-size: 3vw;
+    margin: 0;
+    width: 100%;
+    white-space: nowrap;
+    text-align: center;
+  }
+
+  /* Headshot Image */
+  .headshot-container img {
+      width: 60vw;
+      height: auto;
       margin: 0;
-      width: 100%;
-      white-space: nowrap;
-      text-align: center;
-    }
-
-    /* Headshot Image */
-    .headshot-container img {
-        width: 60vw;
-        height: auto;
-        margin: 0;
-        padding: 0;
-        align-self: flex-end; /* Aligns headshot to the bottom */
-    }
+      padding: 0;
+      align-self: flex-end; /* Aligns headshot to the bottom */
+  }
 
 
 
-    /* Footer Adjustment */
-    footer {
-        padding-top: 0;
-        margin-top: 0;
-    }
+  /* Footer Adjustment */
+  footer {
+      padding-top: 0;
+      margin-top: 0;
+  }
 
   .footer-logo {
     display: flex;
@@ -1306,7 +1315,7 @@ button.submit-button:hover {
   }
 
   .footer-links ul li a {
-    font-size: 2vw;
+    font-size: 2.7vw;
   }
 
   .skills-grid {
