--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,10 @@ a,
   border-bottom: 1px solid currentColor;
 }
 
+a {
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, .5);
+}
+
 .links::after,
 .links a::after {
   content: '';
@@ -1306,7 +1310,6 @@ button.submit-button:hover {
 /* Show the hamburger menu when active */
 .hamburger-nav-links.active {
   transform: translateX(0);
-  /* Slide in */
 }
 
 /* Nav links inside the hamburger menu */
@@ -1321,13 +1324,15 @@ button.submit-button:hover {
 .hamburger-nav-links ul li a {
   font-size: 2rem;
   color: white;
-  text-decoration: none;
+  text-decoration: underline solid cyan;
   padding: 0.625em;
-  transition: color 0.3s ease;
+  border-bottom: none;
+  transition: color 0.3s ease, text-decoration 0.3s ease;
 }
 
 .hamburger-nav-links ul li a:hover {
   color: cyan;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, .5);
 }
 
 
@@ -1888,7 +1893,6 @@ button.submit-button:hover {
   /* Menu button */
   .menu-toggle {
     display: block;
-    background-color: black;
     color: white;
     font-size: 2rem;
     padding: 0.5em;
