--- a/styles.css
+++ b/styles.css
@@ -213,6 +213,8 @@ footer {
   display: flex;
   gap: 2vw;
   justify-content: center;
+  width: 100%;
+  height: auto;
 }
 
 .social-media ul li,
@@ -231,12 +233,28 @@ footer {
   color: white;
 }
 
-.social-media ul li a img {
-  width: 5vw;
-  padding: 2vh 0;
-  object-fit: cover;
+.social-media ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5em;
+  padding: 1em 0;
 }
 
+.social-media ul li {
+  list-style: none;
+}
+
+.social-media ul li img {
+  width: 40px;
+  height: 40px;
+  object-fit: contain;
+  transition: transform 0.3s ease;
+}
+
+.social-media ul li img:hover {
+  transform: scale(1.1);
+}
 
 /* home page */
 
@@ -1519,7 +1537,8 @@ button.submit-button:hover {
   padding: 2em;
 }
 
-#desktop-grade h3 {
+#desktop-grade2 h3,
+#desktop-grade1 h3 {
   font-size: 1.1rem;
 }
 
