--- a/styles.css
+++ b/styles.css
@@ -258,6 +258,12 @@ footer {
 
 /* home page */
 
+.header {
+  width: 100%;
+  height: auto;
+  min-height: 5rem;
+}
+
 .main-title {
   display: flex;
   margin: 0 auto;
@@ -760,7 +766,7 @@ footer {
   width: 100%;
   max-width: 100vw;
   height: auto;
-  min-height: 3rem;
+  min-height: 17rem;
   gap: 0;
 }
 
@@ -768,7 +774,7 @@ footer {
   width: 33.4vw;
   max-width: 40vw;
   height: auto;
-  min-height: 3rem;
+  min-height: 12rem;
   aspect-ratio: 1.77 / 1;
 }
 
@@ -790,16 +796,21 @@ footer {
   border-left: .3em solid black;
   height: auto;
   width: 100%;
+  min-height: 5rem;
 }
 
 .canvas-skills-title h1 {
   font-size: 4vw;
   padding: 0;
+  min-height: 3rem;
+  height: auto;
 }
 
 .canvas-skills-title h2 {
   font-size: 2vw;
   padding: 1vw 0;
+  min-height: 2rem;
+  height: auto;
 }
 
 .skills-grid {
@@ -810,6 +821,7 @@ footer {
   padding: 1vw 2vw;
   width: 100%;
   height: auto;
+  min-height: 10rem;
 }
 
 .skills-firstset h4 {
