--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,12 @@ html {
   overflow-x: hidden;
 }
 
+html {
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+}
+
 h1 {
   position: relative;
   font-family: 'Playfair Display', Georgia, 'Times New Roman', serif;
@@ -60,6 +66,9 @@ body:not(.fonts-loaded) h2 {
   font-weight: normal;
   font-style: normal;
   font-display: swap;
+  ascent-override: 90%;
+  descent-override: 10%;
+  line-gap-override: 0%;
 }
 
 @font-face {
@@ -70,6 +79,9 @@ body:not(.fonts-loaded) h2 {
   font-weight: normal;
   font-style: normal;
   font-display: swap;
+  ascent-override: 90%;
+  descent-override: 10%;
+  line-gap-override: 0%;
 }
 
 @font-face {
@@ -80,6 +92,9 @@ body:not(.fonts-loaded) h2 {
   font-weight: normal;
   font-style: normal;
   font-display: swap;
+  ascent-override: 90%;
+  descent-override: 10%;
+  line-gap-override: 0%;
 }
 
 /* links and buttons */
