--- a/styles.css
+++ b/styles.css
@@ -1023,19 +1023,24 @@ footer {
 
 .resume-date {
   width: 90%;
-  height: auto;
+  height: 100%;
   min-height: 3rem;
   margin: 0 auto;
   max-width: 90%;
-  padding: 0.9375em 0;
+  padding: 0;
 }
 
 .resume-date h2 {
   font-size: clamp(1.5rem, 2.5vw, 3rem);
-  color: black;
+  color: white;
   width: 100%;
   height: auto;
   min-height: 1rem;
+  color: black;
+}
+
+#resume-border {
+  padding-bottom: 0;
 }
 
 #description {
@@ -1073,6 +1078,7 @@ footer {
   min-height: 2rem;
   width: 100%;
   max-width: 100vw;
+  padding: 1em 1em 0.5em;
 }
 
 .resume-summary p {
@@ -1585,11 +1591,11 @@ button.submit-button:hover {
 
 #project-title {
   height: auto;
-  margin: 2em auto 1em;
+  margin: 1em auto 2em;
   line-height: 1.5;
   background-color: white;
   width: 95%;
-  padding: 1em 0 1em;
+  padding: 0;
 }
 
 #project-title h2 {
@@ -1603,13 +1609,25 @@ button.submit-button:hover {
   height: auto;
 }
 
+.mood-board,
+.pagespeed-grade-title,
+.grade-text,
+.grade-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .mood-board h3,
 .pagespeed-grade-title h3,
 .grade-text .grade-title h3 {
   font-size: 1.5rem;
   height: auto;
   min-height: 1rem;
+  width: 100%;
+  color: black;
 }
+
 
 .grade-text {
   width: 100%;
@@ -1652,6 +1670,14 @@ button.submit-button:hover {
 
 .pagespeed-grade-title {
   margin: 3em auto 0;
+}
+
+.pagespeed-grade-title {
+  margin: 1em 0.5em;
+}
+
+.pagespeed-container {
+  margin: 1em auto;
 }
 
 .grades {
@@ -1697,7 +1723,6 @@ button.submit-button:hover {
   width: 100%;
   height: auto;
   max-width: 100%;
-  margin: 0 auto;
 }
 
 .cta-section,
@@ -2079,8 +2104,7 @@ button.submit-button:hover {
   .author-bio,
   .grade-img,
   .project-images,
-  .mood-board,
-  .pagespeed-grade-img {
+  .mood-board {
     padding: 0.2em;
   }
 
@@ -2118,6 +2142,17 @@ button.submit-button:hover {
   .wireframe-img img,
   .site-hero-img img {
     padding: 0.2em;
+  }
+
+  .pagespeed-grade-title,
+  #project-title {
+    height: auto;
+    margin: 0.2em 1em 1em;
+    line-height: 1.5;
+    background-color: white;
+    width: 95%;
+    max-width: 95vw;
+    padding: 0;
   }
 
   #project-title h2 {
@@ -2192,7 +2227,7 @@ button.submit-button:hover {
     max-width: 768px;
     height: auto;
     margin: 0 auto;
-    padding: 0 1em;
+    padding: 0;
   }
 
   .site-hero-img img {
