--- a/styles.css
+++ b/styles.css
@@ -2086,400 +2086,411 @@ button.submit-button:hover {
     width: 100%;
     height: auto;
     min-height: 3rem;
+    align-items: center;
+    justify-content: space-between;
+    min-height: clamp(300px, 40vh, 500px);
   }
 
   .canvas-skills-img {
-    width: 768px;
-    max-width: 768px;
-    height: auto;
-    min-height: 3rem;
-    aspect-ratio: 1.79 / 1;
-  }
-
-  .mood-board {
-    padding: 0.2em;
-  }
-
-  .cta-section,
-  .author-bio,
-  .grade-img,
-  .project-images,
-  .mood-board {
-    padding: 0.2em;
-  }
-
-  .canvas-skills-img img {
-    width: 100%;
-    height: auto;
-    aspect-ratio: inherit;
-    border: 0.5em solid white;
-    background-color: white;
-  }
-
-  .canvas-skills-title {
-    width: 100%;
-    max-width: 100vw;
-    height: auto;
-    border-top: 1em solid black;
-    border-right: 1em solid black;
-    border-left: 1em solid black;
-  }
-
-  .canvas-skills-title h1 {
-    font-size: 2rem;
-    padding: 1em 0 0;
-  }
-
-  .canvas-skills-title h2 {
-    font-size: 1.5rem;
-    padding: 0 0 1em;
-  }
-
-  .grade-text {
-    padding: 0.5em;
-  }
-
-  .wireframe-img img,
-  .site-hero-img img {
-    padding: 0.2em;
-  }
-
-  .pagespeed-grade-title,
-  #project-title {
-    height: auto;
-    margin: 0.2em 1em 1em;
-    line-height: 1.5;
-    background-color: white;
-    width: 95%;
-    max-width: 95vw;
-    padding: 0;
-  }
-
-  #project-title h2 {
-    font-size: clamp(1.5rem, 2vw, 2rem);
-    color: black;
-    width: 100%;
-    height: auto;
-    min-height: 1rem;
-  }
-
-  .button-grid {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .click-me {
-    height: auto;
-    margin: 0 auto;
-  }
-
-  /* Menu button */
-  .menu-toggle {
-    display: block;
-    color: white;
-    font-size: 2rem;
-    padding: 1em 1em 0.5em 0.5em;
-    cursor: pointer;
-    z-index: 20;
-  }
-
-  .hamburger-icon {
-    width: 4.2vw;
-    height: auto;
-    aspect-ratio: 1 / 1;
-    min-height: 1rem;
-  }
-
-  .hamburger-nav-links {
-    display: flex;
-  }
-
-  .hamburger-nav-links {
-    display: none;
-    flex-direction: column;
-    background: black;
-    position: absolute;
-    top: 80px;
-    width: 40%;
-    height: auto;
-    padding: 1em;
-    z-index: 100;
-  }
-
-  .hamburger-nav-links.active {
-    display: flex;
-  }
-
-  .click-me a {
-    font-size: 1rem;
-  }
-
-  .designer-box,
-  .coder-box,
-  .coder-container,
-  .design-container {
-    width: 100%;
-    max-width: 100vw;
-  }
-
-  .site-hero-img {
+    flex: 1;
     width: 100%;
     max-width: 768px;
-    height: auto;
-    margin: 0 auto;
-    padding: 0;
+    margin-bottom: 1rem;
   }
+}
 
-  .site-hero-img img {
-    display: block;
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-    box-sizing: border-box;
-    margin: 0 auto;
-    aspect-ratio: inherit;
-  }
+.canvas-skills-img {
+  width: 768px;
+  max-width: 768px;
+  height: auto;
+  min-height: 3rem;
+  aspect-ratio: 1.79 / 1;
+}
 
-  .headshot-container {
-    align-items: last baseline;
-  }
+.mood-board {
+  padding: 0.2em;
+}
 
-  .headshot-container img,
-  .headshot img,
-  .headshot-animated img {
-    padding: 0;
-  }
+.cta-section,
+.author-bio,
+.grade-img,
+.project-images,
+.mood-board {
+  padding: 0.2em;
+}
 
-  .coder-box h2,
-  .designer-box h2 {
-    font-size: 1.5rem;
-  }
+.canvas-skills-img img {
+  width: 100%;
+  height: auto;
+  aspect-ratio: inherit;
+  border: 0.5em solid white;
+  background-color: white;
+}
 
-  .coder-box h3,
-  .designer-box h3 {
-    font-size: 1rem;
-  }
+.canvas-skills-title {
+  width: 100%;
+  max-width: 100vw;
+  height: auto;
+  border-top: 1em solid black;
+  border-right: 1em solid black;
+  border-left: 1em solid black;
+}
 
-  #nav {
-    margin-top: 0;
-    padding: 0;
-  }
+.canvas-skills-title h1 {
+  font-size: 2rem;
+  padding: 1em 0 0;
+}
 
-  .footer-links ul li a {
-    font-size: 1rem;
-  }
+.canvas-skills-title h2 {
+  font-size: 1.5rem;
+  padding: 0 0 1em;
+}
 
-  .tooltip:hover .tooltip-text {
-    visibility: visible;
-    opacity: 1;
-  }
+.grade-text {
+  padding: 0.5em;
+}
 
-  .collections-button-grid {
-    padding: 0 .5em;
-  }
+.wireframe-img img,
+.site-hero-img img {
+  padding: 0.2em;
+}
 
-  .collections-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: auto;
-    font-size: 2rem;
-    padding: 0.225em .5em;
-    background-color: white;
-    border: 0.2em solid black;
-    border-radius: 2em;
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-    transition: all 0.3s ease;
-  }
+.pagespeed-grade-title,
+#project-title {
+  height: auto;
+  margin: 0.2em 1em 1em;
+  line-height: 1.5;
+  background-color: white;
+  width: 95%;
+  max-width: 95vw;
+  padding: 0;
+}
 
-  .resume-border {
-    width: 95%;
-    height: auto;
-    min-height: 5rem;
-  }
+#project-title h2 {
+  font-size: clamp(1.5rem, 2vw, 2rem);
+  color: black;
+  width: 100%;
+  height: auto;
+  min-height: 1rem;
+}
 
-  .takeme-text {
-    margin: 2em auto 0;
-  }
+.button-grid {
+  display: flex;
+  flex-direction: column;
+}
 
-  .cta-section,
-  .author-bio {
-    max-width: 100%;
-    height: auto;
-    min-height: 3rem;
-  }
+.click-me {
+  height: auto;
+  margin: 0 auto;
+}
 
-  .cta-section img,
-  .author-bio img {
-    width: 100%;
-    height: auto;
-    margin: 0 auto;
-    object-fit: cover;
-    aspect-ratio: inherit;
-  }
+/* Menu button */
+.menu-toggle {
+  display: block;
+  color: white;
+  font-size: 2rem;
+  padding: 1em 1em 0.5em 0.5em;
+  cursor: pointer;
+  z-index: 20;
+}
 
-  .author-bio-text,
-  .cta-section img {
-    margin: 0 auto 1em;
-  }
+.hamburger-icon {
+  width: 4.2vw;
+  height: auto;
+  aspect-ratio: 1 / 1;
+  min-height: 1rem;
+}
 
-  .author-bio h2 {
-    font-size: 1.3rem;
-  }
+.hamburger-nav-links {
+  display: flex;
+}
 
-  .author-bio p {
-    font-size: 1rem;
-  }
+.hamburger-nav-links {
+  display: none;
+  flex-direction: column;
+  background: black;
+  position: absolute;
+  top: 80px;
+  width: 40%;
+  height: auto;
+  padding: 1em;
+  z-index: 100;
+}
 
-  .author-bio-text {
-    width: 98%;
-  }
+.hamburger-nav-links.active {
+  display: flex;
+}
 
-  .list-items ul li {
-    color: white;
-    width: 75%;
-  }
+.click-me a {
+  font-size: 1rem;
+}
 
-  .collections-grid,
-  .collections-row {
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-    max-width: 100%;
-    /* Ensure no overflow */
-    height: auto;
-    padding: 0;
-    margin: 0 auto;
-  }
+.designer-box,
+.coder-box,
+.coder-container,
+.design-container {
+  width: 100%;
+  max-width: 100vw;
+}
 
-  .collections {
-    height: auto;
-    width: 100%;
-  }
+.site-hero-img {
+  width: 100%;
+  max-width: 768px;
+  height: auto;
+  margin: 0 auto;
+  padding: 0;
+}
 
-  footer {
-    margin-top: 2em;
-  }
+.site-hero-img img {
+  display: block;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  box-sizing: border-box;
+  margin: 0 auto;
+  aspect-ratio: inherit;
+}
 
-  .collections-title {
-    width: 100%;
-    height: auto;
-    max-width: 100%;
-  }
+.headshot-container {
+  align-items: last baseline;
+}
 
-  .outer-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    max-width: 100%;
-    height: auto;
-  }
+.headshot-container img,
+.headshot img,
+.headshot-animated img {
+  padding: 0;
+}
 
-  .section1 {
-    display: grid;
-    grid-template-rows: 1fr 3fr;
-    width: 100%;
-    height: auto;
-  }
+.coder-box h2,
+.designer-box h2 {
+  font-size: 1.5rem;
+}
 
-  .section2 {
-    display: flex;
-    padding-right: 3em;
-  }
+.coder-box h3,
+.designer-box h3 {
+  font-size: 1rem;
+}
 
-  .dots {
-    width: 25vw;
-    left: -10%;
-  }
+#nav {
+  margin-top: 0;
+  padding: 0;
+}
 
-  .headshot-about {
-    display: flex;
-    height: auto;
-    width: 25vw;
-    position: absolute;
-    left: -1%;
-    margin-top: 3em;
-    /*new*/
-  }
+.footer-links ul li a {
+  font-size: 1rem;
+}
 
-  .about--me-container {
-    margin-top: 0.2em;
-  }
+.tooltip:hover .tooltip-text {
+  visibility: visible;
+  opacity: 1;
+}
 
-  .portfolio-name {
-    padding: 6em 0 1em;
-    width: 35vw;
-  }
+.collections-button-grid {
+  padding: 0 .5em;
+}
 
-  .portfolio-name img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-  }
+.collections-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: auto;
+  font-size: 2rem;
+  padding: 0.225em .5em;
+  background-color: white;
+  border: 0.2em solid black;
+  border-radius: 2em;
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
 
-  .greetings p {
-    font-size: 1rem;
-  }
+.resume-border {
+  width: 95%;
+  height: auto;
+  min-height: 5rem;
+}
 
-  .greetings-label {
-    width: 20vw;
-  }
+.takeme-text {
+  margin: 2em auto 0;
+}
 
-  .greetings-label h2 {
-    font-size: 1.2rem;
-  }
+.cta-section,
+.author-bio {
+  max-width: 100%;
+  height: auto;
+  min-height: 3rem;
+}
 
-  .facts,
-  .inside-grid-favorites {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: auto;
-    margin: 0 auto;
-    gap: 3vw;
-  }
+.cta-section img,
+.author-bio img {
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  object-fit: cover;
+  aspect-ratio: inherit;
+}
 
-  .favorites {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 3vw;
-    width: 80%;
-    height: 60%;
-    margin: 3vw auto;
-    border: 0.1vw solid white;
-    padding: 2vw 0;
-  }
+.author-bio-text,
+.cta-section img {
+  margin: 0 auto 1em;
+}
 
-  .favorites img {
-    width: 5vw;
-    height: auto;
-    padding: 1vw 0;
-    object-fit: cover;
-  }
+.author-bio h2 {
+  font-size: 1.3rem;
+}
 
-  .favorites-label {
-    height: 4vh;
-    width: 100%;
-  }
+.author-bio p {
+  font-size: 1rem;
+}
 
-  .footer-links {
-    margin-left: 1em;
-  }
+.author-bio-text {
+  width: 98%;
+}
 
-  .footer-links ul {
-    display: flex;
-    justify-content: center;
-  }
+.list-items ul li {
+  color: white;
+  width: 75%;
+}
 
-  .footer-links ul li a {
-    font-size: 0.9rem;
-    margin: 0 auto;
-  }
+.collections-grid,
+.collections-row {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  max-width: 100%;
+  /* Ensure no overflow */
+  height: auto;
+  padding: 0;
+  margin: 0 auto;
+}
+
+.collections {
+  height: auto;
+  width: 100%;
+}
+
+footer {
+  margin-top: 2em;
+}
+
+.collections-title {
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+}
+
+.outer-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  max-width: 100%;
+  height: auto;
+}
+
+.section1 {
+  display: grid;
+  grid-template-rows: 1fr 3fr;
+  width: 100%;
+  height: auto;
+}
+
+.section2 {
+  display: flex;
+  padding-right: 3em;
+}
+
+.dots {
+  width: 25vw;
+  left: -10%;
+}
+
+.headshot-about {
+  display: flex;
+  height: auto;
+  width: 25vw;
+  position: absolute;
+  left: -1%;
+  margin-top: 3em;
+  /*new*/
+}
+
+.about--me-container {
+  margin-top: 0.2em;
+}
+
+.portfolio-name {
+  padding: 6em 0 1em;
+  width: 35vw;
+}
+
+.portfolio-name img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.greetings p {
+  font-size: 1rem;
+}
+
+.greetings-label {
+  width: 20vw;
+}
+
+.greetings-label h2 {
+  font-size: 1.2rem;
+}
+
+.facts,
+.inside-grid-favorites {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  gap: 3vw;
+}
+
+.favorites {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 3vw;
+  width: 80%;
+  height: 60%;
+  margin: 3vw auto;
+  border: 0.1vw solid white;
+  padding: 2vw 0;
+}
+
+.favorites img {
+  width: 5vw;
+  height: auto;
+  padding: 1vw 0;
+  object-fit: cover;
+}
+
+.favorites-label {
+  height: 4vh;
+  width: 100%;
+}
+
+.footer-links {
+  margin-left: 1em;
+}
+
+.footer-links ul {
+  display: flex;
+  justify-content: center;
+}
+
+.footer-links ul li a {
+  font-size: 0.9rem;
+  margin: 0 auto;
+}
 
 }
 
