--- a/styles.css
+++ b/styles.css
@@ -834,17 +834,21 @@ footer {
 }
 
 .canvas-skills-img {
-  width: 33.4vw;
-  max-width: 40vw;
-  height: auto;
-  min-height: 12rem;
-  aspect-ratio: 1.77 / 1;
-  border-bottom: 1em solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 0.5em solid black;
+  border-left: .3em solid black;
   border-right: .3em solid black;
+  height: auto;
+  width: 100%;
+  max-width: 100vw;
+  aspect-ratio: 1.79 / 1;
+  min-height: 5rem;
 }
 
 .canvas-skills-img img {
-  height: 100%;
   display: block;
   width: 100%;
   height: auto;
@@ -862,9 +866,11 @@ img[fetchpriority="high"] {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border-bottom: 1em solid black;
+  border-bottom: 0.5em solid black;
   border-left: .3em solid black;
+  border-right: .3em solid black;
   height: auto;
+  max-width: 100vw;
   width: 100%;
   min-height: 5rem;
 }
